# monorepo

./: .dockerignore  .editorconfig  .env.example  .git-blame-ignore-revs  .gitignore  .lycheeignore  .mcp.json  .oxlintrc.json  .prettierignore  ADMIN.md  Cargo.toml  DECISIONS.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  DOCKER-SETUP.md  Dockerfile  QUICKSTART.md  README.md  SOL-UNIFY-TASK.md  backup.ps1  courier.service.example  deploy.ps1  docker-compose.yml  eslint.config.ts  knip.config.ts  lychee.toml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  skills-lock.json  svelte.config.js  tailwind.config.js  tsconfig.json  typos.toml  vite.config.ts
.agents/: setup
.github/: CODEOWNERS  renovate.json
.github/ISSUE_TEMPLATE/: new-app.md
.github/workflows/: ci.yml  console-release.yml  point-release.yml  point.yml  zizmor.yml
apps/box-agent/: Cargo.toml  DECISIONS-box-agent.md
apps/box-agent/src/: config.rs  events.rs  inbox.rs  lib.rs  main.rs  worker.rs
apps/box-agent/tests/: durability_it.rs
apps/clarity-mcp/: README.md  package.json  tsconfig.json
apps/collegemap/: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  package.json  pnpm-lock.yaml
apps/console/: .env.example  .gitignore  DESIGN.md  Dockerfile  PRODUCT.md  auth.cli.ts  docker-compose.demo.yml  docker-entrypoint.sh  effectdb.config.ts  eslint.config.ts  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts  (+1 more)
apps/console-api/: .env.example  .oxlintrc.json  Dockerfile  package.json  vitest.config.ts
apps/control-plane/: Cargo.toml  DECISIONS-control-plane.md
apps/control-plane/src/: config.rs  discipline.rs  governance.rs  lib.rs  main.rs  registry.rs  tokens.rs  vault.rs
apps/courier/: .gitignore  Cargo.toml  README.md  config.example.yaml  docker-compose.yml
apps/courier/crates/courier/: Cargo.toml
apps/courier/crates/courier-ai/src/: gemini.rs  lib.rs  mcp.rs  mcp_server.rs  pii.rs
apps/courier/crates/courier-core/src/: config.rs  health.rs  lib.rs  plugin.rs  send.rs  text.rs
apps/courier/crates/courier-plugins/: Cargo.toml
apps/courier/crates/courier-plugins/src/: diag.rs  lib.rs  manager.rs
apps/courier/crates/courier-relay/: Cargo.toml
apps/courier/crates/courier-relay/src/: format.rs  idempotency.rs  ledger.rs  lib.rs  plan.rs  state.rs
apps/courier/crates/courier/src/: args.rs  dispatch.rs  engine.rs  logging.rs  main.rs  plugins.rs  service.rs  verify.rs
apps/dispatcher/: Cargo.toml  DECISIONS-dispatcher.md
apps/dispatcher/src/: board.rs  card.rs  config.rs  deliver.rs  digest.rs  dispatch.rs  envelope.rs  glitchtip.rs  lib.rs  main.rs  policy.rs  roster.rs  tracker.rs  wake.rs
apps/dispatcher/tests/: bus_it.rs
apps/manager/: Cargo.toml  FABLE-SPEC-canary-deploy.md  RUNBOOK-canary-deploy.md  config.example.json  manager.js
apps/manager/docs/: tmux-host-config.md  tmux.conf.reviewable
apps/manager/docs/contracts/: CONTRACTS.md  DECISIONS.md  validate.py
apps/manager/docs/contracts/fable-briefs/: DECISIONS-N1.1.md  DECISIONS-N1.2.md  FABLE-BRIEF-N1.1-manager-core.md  FABLE-BRIEF-N1.2-tmux-layer.md  FABLE-BRIEF-N1.3-matrix-channel-features.md  FABLE-BRIEF-N1.4-doorman.md  FABLE-BRIEF-N1.5-fleet-cockpit.md  FABLE-BRIEF-N1.6-tasks-library.md  FABLE-BRIEF-N1.7-web-terminal.md  README.md
apps/manager/docs/contracts/schemas/: backchannel-rpc.schema.json  fleet-event.schema.json  manager-config.schema.json  queue-lease.schema.json  session-state.schema.json  task-card.schema.json
apps/manager/manager-rs/: RUNBOOK-canary-deploy.md  flake.nix
apps/manager/manager-rs/src/: config.rs  health.rs  state.rs  tmux.rs
apps/manager/nix/: agent-manager.nix
apps/manager/scripts/: container-validate.sh
apps/manager/src/: assistant.rs  config.rs  health.rs  main.rs  matrix.rs  state.rs  supervisor.rs  tmux.rs
apps/manager/tests/: creds_reload_it.rs  scratch_reload_it.rs  tmux_it.rs
apps/matrix-bot/crates/bot/: Cargo.toml
apps/matrix-bot/crates/bot/src/: main.rs  plugins.rs
apps/matrix-bot/crates/plugin-ai/: Cargo.toml
apps/matrix-bot/crates/plugin-ai/src/: gemini.rs  lib.rs  mcp.rs  pii.rs
apps/matrix-bot/crates/plugin-relay/: Cargo.toml
apps/matrix-bot/crates/plugin-relay/src/: lib.rs  relay_config.rs
apps/point/app/rust/: Cargo.toml  build-android.sh
apps/point/app/rust/src/: frb_generated.rs  lib.rs
apps/point/app/rust/src/api/: crypto.rs  fuzz.rs  mod.rs  recovery.rs
apps/point/core/: Cargo.toml
apps/point/core/src/: crypto.rs  errors.rs  fuzz.rs  lib.rs  recovery.rs  types.rs
apps/point/server/: Cargo.toml  Dockerfile
apps/point/server/migrations/: 0001_init.sql  0002_federation.sql  0003_recovery.sql  0004_profile_privacy.sql  0005_push_endpoints.sql  0006_rekeyed_at.sql  0007_mls_message_quarantine.sql  0008_retain_last_known.sql
apps/point/server/src/: authz.rs  config.rs  error.rs  federation_keys.rs  main.rs  push.rs  state.rs
apps/point/server/src/api/: account.rs  auth.rs  federation.rs  ghost.rs  groups.rs  history.rs  invites.rs  mls.rs  mod.rs  oidc.rs  rate_limit.rs  recovery.rs  shares.rs  tests.rs  tests_recovery.rs  tests_sharing.rs  tests_ws_mls.rs  tiles.rs
apps/point/server/src/api/federation/: tests.rs
apps/point/server/src/db/: mod.rs  users.rs
apps/point/server/src/ws/: hub.rs  mod.rs
apps/point/server/tests/: container_e2e.rs  federation_e2e.rs  run-federation-e2e.sh  tracking_e2e.rs
crates/courier-ai/: Cargo.toml
crates/courier-ai/src/: history.rs  lib.rs
crates/courier-core/: Cargo.toml
crates/courier-core/src/: bound.rs  supervise.rs  watchdog.rs
docs/: ARCHITECTURE.md  CUTOVER.md  DESIGN.md  MIGRATION.md  PLAN.md  REBUILD.md
manager-rs/: Cargo.toml  config.example.json
patches/: knip.patch  knip@6.16.0.patch
prisma/: schema.prisma
server/: Cargo.toml
server/migrations/: 0001_init.sql
server/src/: auth.rs  authz.rs  config.rs  main.rs  state.rs
server/src/api/: mod.rs  tests.rs
server/src/ws/: hub.rs  mod.rs
src/: app.css  app.d.ts  app.html  hooks.server.ts
tools/: README.md
(+953 files in other folders)
