[package]
name = "point-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The E2E MLS jewels, lifted from legacy point-core.
point-core = { path = "../core" }
