[package]
name = "box-agent"
version = "0.1.0"
edition = "2021"
description = "Per-machine fleet agent: receives task-cards over the backchannel, spawns/supervises disposable worker processes (OS-neutral, Windows first-class), advertises capacity, and emits fleet events."
license = "MIT"

[dependencies]
dispatcher = { path = "../dispatcher" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
