[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"
description = "Fleet control plane (the Manager's brains): token/credential authority with a file vault, cost/rate governance (traffic light, tier downgrade before 429, cascade detection, lease-based quota reclaim), tracker-discipline enforcement, and the agent capacity registry."
license = "MIT"

[dependencies]
dispatcher = { path = "../dispatcher" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
