[package]
name = "dispatcher"
version = "0.1.0"
edition = "2021"
description = "Layer-0 bus: turns Matrix messages, tracker transitions, and system conditions into task-cards; enforces the LOCKED interrupt model; runs the hybrid push/pull wanted board (CAS claim, fenced leases, priority+aging)."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rand = "0.10"
# ureq 2.x pinned deliberately (3.x changed the API) — same pin as apps/manager. tls = rustls.
ureq = { version = "3.0", default-features = false, features = ["tls", "json"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
