[package]
name = "courier-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures-util.workspace = true
matrix-sdk.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }

[lints]
workspace = true
