# point-core — LIFTED WHOLESALE from the legacy repo (`point-core`).
# Decision: "lift the jewels" — this OpenMLS-based E2E crate is reused as-is in the
# Point rebuild. Only the workspace path changed (legacy `point-core/` -> `core/`);
# the package name and source are unchanged. Do not rewrite; extend.
[package]
name = "point-core"
version = "0.1.0"
edition = "2021"

[dependencies]
openmls = "0.6"
openmls_traits = "0.3"
openmls_rust_crypto = "0.3"
openmls_basic_credential = "0.3"
openmls_memory_storage = { version = "0.3", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
base64 = "0.22"
rand = "0.8"
hex = "0.4"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
