[package]
name = "courier-relay"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
courier-core.workspace = true
matrix-sdk.workspace = true
mime.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
