[package]
name = "courier"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
courier-ai.workspace = true
courier-core.workspace = true
courier-plugins.workspace = true
courier-relay.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
matrix-sdk.workspace = true
rpassword = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }

[features]
default = ["rpassword"]

[lints]
workspace = true
