[package]
name = "plugin-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
matrix-sdk.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_yaml.workspace = true
time.workspace = true
tracing.workspace = true
tokio.workspace = true
serde_json.workspace = true
uuid = { version = "1.0", features = ["v4"] }
regex = "1"

plugin-core = { path = "../plugin-core" }

[lints]
workspace = true
