[package]
name = "plugin-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
matrix-sdk.workspace = true
mime.workspace = true
plugin-core = { path = "../plugin-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
